<resources>
    <string name="app_name">Laboratorio04</string>
    <string name="title_activity_main2">Reservalo.com</string>

    <string name="navigation_drawer_open">Mostrar Opciones</string>
    <string name="navigation_drawer_close">Ocultar Opciones</string>

    <string name="action_settings">Configuracion</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>

    <string name="pref_mute">Silencio</string>
    <string name="pref_mute_summ">Desactivar todos los sonidos de la aplicación.</string>
    <string name="pref_textsize">Tamaño del texto</string>
    <string name="pref_textsize_descr">Ingrese tamaño del texto</string>
    <string name="pref_textsize_summ">Set text size of the interface</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_descr">Pick a color</string>
    <string name="pref_theme_summ">Set the application\'s color theme</string>
    <string name="pref_tone">Ringtone</string>
    <string name="pref_tone_summ">Seleccione el Ringtone</string>
    <string name="menu_settings">Settings</string>
    <string name="clear_settings">Reset settings</string>
    <string name="pref_name">Nombre de usuario</string>
    <string name="pref_name_summary">Ingrese nombre de usuario</string>
    <string name="pref_email">Email</string>
    <string name="pref_email_desc">Email</string>
    <string name="pref_email_summ">Ingrese su email</string>


</resources>
